plugins {
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id 'groovy'
    id 'com.github.ben-manes.versions' version '0.47.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.18'
}

group = 'no.fintlabs'
sourceCompatibility = '17'

jar {
    enabled = false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}


dependencies {
    implementation "no.fint:fint-okonomi-model-java:${apiVersion}"
    implementation "no.fint:fint-okonomi-resource-model-java:${apiVersion}"
    implementation "no.fint:fint-utdanning-resource-model-java:${apiVersion}"
    implementation 'no.fintlabs:fint-resource-server-security:1.1.1-rc-3'
    implementation 'no.fint:fint-model-resource:0.4.1'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.97.Final:osx-aarch_64'

    // this one goes!
    // implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    implementation 'org.springframework.data:spring-data-commons'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'org.jooq:jool-java-8:0.9.15'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // https://mvnrepository.com/artifact/org.apache.poi/poi
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    implementation 'org.apache.tika:tika-parsers:1.24.1'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    //testImplementation 'no.fint:fint-test-utils:0.0.6'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.9.2'
    testImplementation 'io.projectreactor:reactor-test:3.5.9'
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
    testImplementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
}

test {
    useJUnitPlatform()
}